--- a/projects/midterm-project/package.json
+++ b/projects/midterm-project/package.json
@@ -11,8 +11,14 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.17.1",
+        "dotenv": "^8.2.0",
         "express": "^4.15.2",
         "express-handlebars": "^3.0.0",
-        "morgan": "^1.8.1"
+        "marked": "^0.8.2",
+        "moment": "^2.24.0",
+        "mongoose": "^5.9.13",
+        "morgan": "^1.8.1",
+        "socket.io": "^2.3.0",
+        "underscore": "^1.10.2"
     }
 }
